@@ -103,6 +103,14 @@ extern "C"
 #  define AF_ANY (-1)
 #endif /* AF_ANY */
 
+#if !defined (AF_UNSPEC)
+#  define AF_UNSPEC 0
+#endif /* AF_UNSPEC */
+
+#if !defined (PF_UNSPEC)
+#  define PF_UNSPEC 0
+#endif /* PF_UNSPEC */
+
 #define AF_SPIPE (AF_MAX + 1)
 #if !defined (AF_FILE)
 #  define AF_FILE (AF_MAX + 2)
