@@ -1,3 +1,9 @@
+Fri Oct 20 09:00:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+	* ace/os_include/sys/os_socket.h:
+	  Defined AF_UNSPEC and PF_UNSPEC when these are not defined by the
+	  OS header files.
+
 Fri Oct 20 08:55:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>
 
 	* ace/os_include/sys/os_uio.h:
